init frontend, fix backend (cors, api, interfaces)
