# backend/services/notes/docs/swagger.yaml
@@ -12,51 +12,39 @@ definitions:
       user_id:
         type: integer
     type: object
+  http.CreateNoteParam:
+    properties:
+      content:
+        type: string
+      user_id:
+        type: integer
+    type: object
 info:
   contact: {}
 paths:
   /notes:
     get:
-      description: Retrieves all notes for a specific user within a specified date
-        range.
-      parameters:
-      - description: User ID
-        in: query
-        name: userID
-        required: true
-        type: integer
-      - description: Start date (RFC3339 format)
-        in: query
-        name: start
-        required: true
-        type: string
-      - description: End date (RFC3339 format)
-        in: query
-        name: end
-        required: true
-        type: string
+      description: Get all notes from db
       produces:
       - application/json
       responses:
-        "200":
-          description: List of notes within the date range
+        "201":
+          description: List of all notes
           schema:
-            items:
-              $ref: '#/definitions/entity.Note'
-            type: array
+            $ref: '#/definitions/entity.Note'
         "400":
-          description: Bad request if date parameters are invalid
+          description: Bad request if the JSON body cannot be parsed
           schema:
             additionalProperties:
               type: string
             type: object
         "500":
-          description: Internal Server Error if there is a problem retrieving notes
+          description: Internal Server Error if there is a problem creating the note
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: Get notes by date range
+      summary: Get all notes
       tags:
       - Notes
     post:
@@ -69,7 +57,7 @@ paths:
         name: note
         required: true
         schema:
-          $ref: '#/definitions/entity.Note'
+          $ref: '#/definitions/http.CreateNoteParam'
       produces:
       - application/json
       responses:
@@ -165,7 +153,7 @@ paths:
         name: note
         required: true
         schema:
-          $ref: '#/definitions/entity.Note'
+          $ref: '#/definitions/http.CreateNoteParam'
       produces:
       - application/json
       responses:
@@ -186,6 +174,50 @@ paths:
               type: string
             type: object
       summary: Update a note
+      tags:
+      - Notes
+  /notes_range:
+    get:
+      description: Retrieves all notes for a specific user within a specified date
+        range.
+      parameters:
+      - description: User ID
+        in: query
+        name: userID
+        required: true
+        type: integer
+      - description: Start date (RFC3339 format)
+        in: query
+        name: start
+        required: true
+        type: string
+      - description: End date (RFC3339 format)
+        in: query
+        name: end
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of notes within the date range
+          schema:
+            items:
+              $ref: '#/definitions/entity.Note'
+            type: array
+        "400":
+          description: Bad request if date parameters are invalid
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error if there is a problem retrieving notes
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get notes by date range
       tags:
       - Notes
   /users/{userID}/notes:
